fixes ol alignment in about page

--- a/scss/about.scss
+++ b/scss/about.scss
@@ -36,6 +36,7 @@ main {
         position: relative;
         margin: 35px;
         padding: 15px;
+        padding-top: 5px;
         @media only screen and (max-width: 1200px) {
             width: auto;
             height: auto;
